// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generate-types: references with embedded schema 1`] = `
"// NOTE This file is auto-generated by Contentlayer

import type { Markdown, MDX, ImageFieldData, IsoDateTimeString } from 'contentlayer/core'
import * as Local from 'contentlayer/source-files'

export { isType } from 'contentlayer/client'

export type { Markdown, MDX, ImageFieldData, IsoDateTimeString }

/** Document types */
export type Person = {
  /** File path relative to \`contentDirPath\` */
  _id: string
  _raw: Local.RawDocumentData
  type: 'Person'
  name: string
  /** Markdown file body */
  body: Markdown

}

export type Post = {
  /** File path relative to \`contentDirPath\` */
  _id: string
  _raw: Local.RawDocumentData
  type: 'Post'
  title: string
  author: Person
  /** Markdown file body */
  body: Markdown

}  

/** Nested types */
  

/** Helper types */

export type AllTypes = DocumentTypes | NestedTypes
export type AllTypeNames = DocumentTypeNames | NestedTypeNames

export type DocumentTypes = Person | Post
export type DocumentTypeNames = 'Person' | 'Post'

export type NestedTypes = never
export type NestedTypeNames = never

export type DataExports = {
  allDocuments: DocumentTypes[]
  allPosts: Post[]
  allPeople: Person[]
}


export interface ContentlayerGenTypes {
  documentTypes: DocumentTypes
  documentTypeMap: DocumentTypeMap
  documentTypeNames: DocumentTypeNames
  nestedTypes: NestedTypes
  nestedTypeMap: NestedTypeMap
  nestedTypeNames: NestedTypeNames
  allTypeNames: AllTypeNames
  dataExports: DataExports
}

declare global {
  interface ContentlayerGen extends ContentlayerGenTypes {}
}

export type DocumentTypeMap = {
  Person: Person
  Post: Post
}

export type NestedTypeMap = {

}

 "
`;

exports[`generate-types: simple schema 1`] = `
"// NOTE This file is auto-generated by Contentlayer

import type { Markdown, MDX, ImageFieldData, IsoDateTimeString } from 'contentlayer/core'
import * as Local from 'contentlayer/source-files'

export { isType } from 'contentlayer/client'

export type { Markdown, MDX, ImageFieldData, IsoDateTimeString }

/** Document types */
export type TestPost = {
  /** File path relative to \`contentDirPath\` */
  _id: string
  _raw: Local.RawDocumentData
  type: 'TestPost'
  /** The title of the post */
  title: string
  /** The date of the post */
  date: IsoDateTimeString
  /** Markdown file body */
  body: Markdown
  slug: string
}  

/** Nested types */
  

/** Helper types */

export type AllTypes = DocumentTypes | NestedTypes
export type AllTypeNames = DocumentTypeNames | NestedTypeNames

export type DocumentTypes = TestPost
export type DocumentTypeNames = 'TestPost'

export type NestedTypes = never
export type NestedTypeNames = never

export type DataExports = {
  allDocuments: DocumentTypes[]
  allTestPosts: TestPost[]
}


export interface ContentlayerGenTypes {
  documentTypes: DocumentTypes
  documentTypeMap: DocumentTypeMap
  documentTypeNames: DocumentTypeNames
  nestedTypes: NestedTypes
  nestedTypeMap: NestedTypeMap
  nestedTypeNames: NestedTypeNames
  allTypeNames: AllTypeNames
  dataExports: DataExports
}

declare global {
  interface ContentlayerGen extends ContentlayerGenTypes {}
}

export type DocumentTypeMap = {
  TestPost: TestPost
}

export type NestedTypeMap = {

}

 "
`;

exports[`generate-types: simple schema with optional fields 1`] = `
"// NOTE This file is auto-generated by Contentlayer

import type { Markdown, MDX, ImageFieldData, IsoDateTimeString } from 'contentlayer/core'
import * as Local from 'contentlayer/source-files'

export { isType } from 'contentlayer/client'

export type { Markdown, MDX, ImageFieldData, IsoDateTimeString }

/** Document types */
export type TestPost = {
  /** File path relative to \`contentDirPath\` */
  _id: string
  _raw: Local.RawDocumentData
  type: 'TestPost'
  /** The title of the post */
  title: string
  /** The date of the post */
  date?: IsoDateTimeString | undefined
  /** Markdown file body */
  body: Markdown
  slug: string
}  

/** Nested types */
  

/** Helper types */

export type AllTypes = DocumentTypes | NestedTypes
export type AllTypeNames = DocumentTypeNames | NestedTypeNames

export type DocumentTypes = TestPost
export type DocumentTypeNames = 'TestPost'

export type NestedTypes = never
export type NestedTypeNames = never

export type DataExports = {
  allDocuments: DocumentTypes[]
  allTestPosts: TestPost[]
}


export interface ContentlayerGenTypes {
  documentTypes: DocumentTypes
  documentTypeMap: DocumentTypeMap
  documentTypeNames: DocumentTypeNames
  nestedTypes: NestedTypes
  nestedTypeMap: NestedTypeMap
  nestedTypeNames: NestedTypeNames
  allTypeNames: AllTypeNames
  dataExports: DataExports
}

declare global {
  interface ContentlayerGen extends ContentlayerGenTypes {}
}

export type DocumentTypeMap = {
  TestPost: TestPost
}

export type NestedTypeMap = {

}

 "
`;
